--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-mongodb": "3.63.0",
+    "@payloadcms/email-resend": "^3.63.0",
     "@payloadcms/next": "3.63.0",
     "@payloadcms/richtext-lexical": "3.63.0",
     "@payloadcms/ui": "3.63.0",
