--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "15.4.7",
     "payload": "3.63.0",
     "postcss": "^8.5.6",
@@ -43,6 +44,7 @@
     "sharp": "0.34.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "three": "^0.181.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.7",
