--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "15.4.7",
+    "ogl": "^1.0.11",
     "payload": "3.63.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
