feat: Update Hero component with Dither effect and adjust styles
- Replaced FloatingLines with Dither component in Hero section for enhanced visual effects.
- Adjusted Hero section height to improve layout responsiveness.
- Modified button styles for better aesthetics.
- Updated main-container styles for improved padding on larger screens.

style: Refine component styles for better layout

- Increased padding on main-container for larger screens.
- Adjusted liquid-glass class to remove unnecessary comments and improve clarity.

feat: Add ColorBends component for advanced visual effects

- Introduced ColorBends component with customizable properties for dynamic visuals.
- Implemented shader logic for color manipulation and animation.

feat: Implement Dither component for wave effects

- Created Dither component with customizable wave effects and mouse interaction.
- Integrated dither effect into the visual design for enhanced aesthetics.

feat: Introduce DotGrid component for interactive dot animations

- Developed DotGrid component with GSAP for smooth animations based on mouse interactions.
- Added properties for customization of dot behavior and appearance.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@payloadcms/ui": "3.63.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/postcss": "^4.1.17",
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -33,12 +35,14 @@
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "15.4.7",
     "ogl": "^1.0.11",
     "payload": "3.63.0",
     "postcss": "^8.5.6",
+    "postprocessing": "^6.38.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
