--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "vitest": "3.2.3"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0",
-    "pnpm": "^9 || ^10"
+    "node": "22.x",
+    "pnpm": "10.24.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
