--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@payloadcms/email-resend": "^3.63.0",
     "@payloadcms/next": "3.63.0",
     "@payloadcms/richtext-lexical": "3.63.0",
+    "@payloadcms/storage-uploadthing": "^3.63.0",
     "@payloadcms/ui": "3.63.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
