--- a/package.json
+++ b/package.json
@@ -13,73 +13,60 @@
     "g:i": "payload generate:importmap"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@payloadcms/db-mongodb": "3.63.0",
-    "@payloadcms/email-resend": "^3.63.0",
-    "@payloadcms/next": "3.63.0",
-    "@payloadcms/richtext-lexical": "3.63.0",
-    "@payloadcms/storage-uploadthing": "^3.63.0",
-    "@payloadcms/ui": "3.63.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@payloadcms/db-mongodb": "3.18.0",
+    "@payloadcms/email-resend": "3.18.0",
+    "@payloadcms/next": "3.18.0",
+    "@payloadcms/richtext-lexical": "3.18.0",
+    "@payloadcms/storage-uploadthing": "3.18.0",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
-    "@tailwindcss/postcss": "^4.1.17",
-    "babel-plugin-react-compiler": "^1.0.0",
+    "@tailwindcss/postcss": "^4",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.553.0",
+    "lucide-react": "^0.539.0",
     "motion": "^12.23.24",
-    "next": "15.4.7",
+    "next": "15.4.2",
     "ogl": "^1.0.11",
-    "payload": "3.63.0",
+    "payload": "3.18.0",
     "postcss": "^8.5.6",
     "postprocessing": "^6.38.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.66.0",
-    "sharp": "0.34.2",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
+    "react-hook-form": "^7.62.0",
+    "sharp": "0.34.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4",
     "three": "^0.181.1",
-    "zod": "^4.1.12"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/eslintrc": "^3",
     "@playwright/test": "1.56.1",
     "@testing-library/react": "16.3.0",
-    "@types/node": "^22.5.4",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.4.7",
-    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-config-next": "15.4.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "26.1.0",
     "playwright": "1.56.1",
     "playwright-core": "1.56.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.7.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
-  },
-  "packageManager": "pnpm@10.24.0",
-  "engines": {
-    "node": "22.x",
-    "pnpm": "10.24.0"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "sharp",
-      "esbuild",
-      "unrs-resolver"
-    ]
   }
 }
